--- a/package.json
+++ b/package.json
@@ -14,26 +14,40 @@
   "dependencies": {
     "@types/react": "^15.0.14",
     "@types/react-dom": "^0.14.23",
+    "@types/requirejs": "^2.1.28",
+    "jquery": "^3.1.1",
+    "jquery-ui": "^1.12.1",
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.6",
     "awesome-typescript-loader": "^3.0.8",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.26.2",
     "glob": "^7.1.1",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.1.5",
     "html-webpack-plugin": "^2.28.0",
+    "postcss": "^5.2.16",
+    "postcss-loader": "^1.3.3",
+    "postcss-nested": "^1.0.0",
+    "postcss-smart-import": "^0.6.9",
+    "precss": "^1.4.0",
     "react-docgen": "^2.13.0",
     "react-docgen-typescript": "0.0.1",
     "react-styleguidist": "^4.6.3",
     "source-map-loader": "^0.1.6",
+    "style-loader": "^0.13.2",
     "ts-loader": "^2.0.1",
     "tsc": "^1.20150623.0",
     "tslint": "^4.5.1",
     "tslint-react": "^2.4.0",
     "typescript": "^2.2.1",
+    "typescript-require": "^0.2.9-1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
